# zot

./: Cargo.toml  README.md
src/: api.rs  cli.rs  config.rs  main.rs
tests/: json_input_cli.rs
